--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   intl: ^0.16.1
   cloud_firestore: ^0.16.0
   firebase_core: ^0.7.0
-
+  firebase_auth: ^0.20.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
