--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
+  provider: ^4.3.2+4
 dev_dependencies:
   flutter_test:
     sdk: flutter
